--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,5 +22,10 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Mirage', sans-serif;
+}
+
+@font-face {
+  font-family: 'Mirage';
+  src: url('/fonts/mirage_regular.otf');
 }
